fixed bug with audio controls being behind container

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ audio {
     position: absolute;
     height: 2rem;
     top: 95%;
+    z-index: 1000;
 }
 
 .start {
